fix horizontal scrollbar

--- a/css/index.css
+++ b/css/index.css
@@ -76,6 +76,7 @@ body {
 
 .footer {
     font-size:12px;
+    width:100%;
 }
 
 .btn-darkred {
